2006-03-10  David Hyatt <hyatt@apple.com>

        More refactoring.  Split the FontData into cross-platform and
        platform-specific components.

        Reviewed by eric

        * WebCore.vcproj/WebCore/WebCore.vcproj:
        * platform/FontData.h: Added.
        (WebCore::FontData:::m_platformData):
        (WebCore::FontData::platformData):
        (WebCore::FontData::setMetrics):
        (WebCore::FontData::ascent):
        (WebCore::FontData::descent):
        (WebCore::FontData::xHeight):
        (WebCore::FontData::lineSpacing):
        * platform/FontPlatformData.h: Added.
        (WebCore::FontPlatformData::hfont):
        (WebCore::FontPlatformData::scaledFont):
        * platform/win/FontPlatformDataWin.cpp: Added.
        (WebCore::FontPlatformData::FontPlatformData):
        (WebCore::FontPlatformData::~FontPlatformData):
        * platform/win/FontWin.cpp:
        (WebCore::Font::floatWidth):
        (WebCore::Font::drawText):

2006-03-10  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Eric.

        - fix win32 networking to properly use async load API

        * platform/win/TransferJobWin.cpp:
        (WebCore::TransferJobWndProc):
        (WebCore::TransferJob::start):

2006-03-10  Eric Seidel  <eseidel@apple.com>

        Fix build.

        * platform/win/FontWin.cpp:
        (WebCore::getFontData):
        * platform/win/TemporaryLinkStubs.cpp:

2006-03-10  Adele Peterson  <adele@apple.com>

        Reviewed by Tim Hatcher.

        - fix for <rdar://problem/4469419> 
        REGRESSION: RadioButtons are not checked in Safari when name attribute comes after checked attribute

        Test: fast/forms/radio-attr-order.html

        * khtml/html/HTMLInputElementImpl.cpp: (WebCore::HTMLInputElementImpl::parseMappedAttribute):
        When the name attribute gets parsed for radio buttons, if its supposed to be checked by default, call setChecked.
        Also, when the name changes on a checked button, we don't need to check that 