@@ -1,3 +1,13 @@
+2006-03-10  Justin Garcia  <justin.garcia@apple.com>
+        
+        Reviewed by darin, harrison
+        
+        ~3x speedup pasting plain text from the console
+
+        * dom/dom_position.cpp:
+        (WebCore::Position::next): 
+        (WebCore::Position::atEnd): 
+
 2006-03-10  David Hyatt <hyatt@apple.com>
 
         More refactoring.  Split the FontData into cross-platform and
